syntax = "proto2";
package msg;

// 个人提示信息
message GW2C_MsgNotify {
    optional int64 userid = 1;
    optional string text = 2;
}

// 公告类型
enum NoticeType {
    Suspension = 1; // 悬浮公告
    Marquee = 2;    // 跑马灯公告
}

// 公告提示信息
message GW2C_MsgNotice {
    optional int64 userid = 1;
    optional string head = 2;
    optional string name = 3;
    optional int32  type = 4;
    optional string text = 5;
}

//转发
message GW2MS_MsgNotice {
    optional GW2C_MsgNotice notice = 1;
}

//转发
message RS2MS_MsgNotice {
    optional GW2C_MsgNotice notice = 1;
}

//分发
message MS2GW_MsgNotice {
    optional GW2C_MsgNotice notice = 1;
}


